# suika_rl

./: .gitignore  check_bitmap.py  check_input.py  demo_node_random_gui.py  demo_node_real_screen.py  infer_policy.py  policy_gif_callback.py  pyproject.toml  train.py  train_bitmap.py  train_coordconv.py  train_dqn.py  train_gnn.py  train_mlp.py  train_transformer.py  view_node_env_gui.py  visualize_train_input.py
check_bitmap/: bitmap_step10.txt
gifs/: latest_policy_action.txt  policy_10pct_action.txt  policy_20pct_action.txt  policy_30pct_action.txt  policy_40pct_action.txt  policy_50pct_action.txt  policy_60pct_action.txt  policy_70pct_action.txt  policy_80pct_action.txt  policy_90pct_action.txt
gifs/cnn/: latest_policy.error.txt  latest_policy_action.txt  policy_100pct_action.txt  policy_10pct_action.txt  policy_20pct_action.txt  policy_30pct_action.txt  policy_40pct_action.txt  policy_50pct_action.txt  policy_60pct_action.txt  policy_70pct_action.txt  policy_80pct_action.txt  policy_90pct_action.txt
suika_env/: __init__.py  suika_browser_env.py
suika_env/suika-game/: index.js
suika_env_node/: __init__.py  suika_browser_env.py  suika_node_env.py  suika_node_worker.cjs
suika_game/: package-lock.json  package.json  slides.md
